--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Integrantes:</h2>
     <ol>
         <li>Javi</li>
-        <li></li>
+        <li>Javier</li>
         <li></li>
         <li></li>
         <li></li>
